--- a/Assets/css/guess.css
+++ b/Assets/css/guess.css
@@ -8,8 +8,6 @@ body{
     color: white;
     height: 100vh;
     box-sizing: border-box;
-    /* background: url(./randomnumbers.jpg) center no-repeat; */
-    /* background-size: cover; */
     background-color: #F0EBCC;
 }
 p{
@@ -54,13 +52,15 @@ input[type="button"]:hover{
 }
 h1{
     color: #04009A;
+    margin: 0;
     margin-right: 10px;
 }
 .display{
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
     width: 80%;
+    margin: 10px 0;
 }
 .hello{
     display: none;
@@ -114,6 +114,9 @@ button:hover{
 }
 
 @media screen and (max-width:425px) and (min-width:320px){
+    .pagewrapper{
+        width: 90%;
+    }
     .no5{
         font-size: 20px;
     }
@@ -125,17 +128,21 @@ button:hover{
         background-color: #77ACF1;
     }
     h1{
+        padding: 0;
         font-size: 15px;
         margin-right: 5px;
+        width: 100px;
+        
     }
     #number{
         border-bottom: 1px solid #3EDBF0;
-        width: 20px;
+        flex: 20%;
+        width: 50px;
         height: 20px;
     }
     input[type="button"]{
         width: 30%;
-        padding: 8px;
+        padding: 10px;
         border-radius: 5px;
         margin: 5px auto;
         font-size: 12px;
