--- a/Assets/css/guess.css
+++ b/Assets/css/guess.css
@@ -130,14 +130,14 @@ button:hover{
     h1{
         padding: 0;
         font-size: 15px;
-        margin-right: 5px;
+        margin-right: 10px;
         width: 100px;
+        white-space: nowrap;
         
     }
     #number{
         border-bottom: 1px solid #3EDBF0;
-        flex: 20%;
-        width: 50px;
+        width: 20px;
         height: 20px;
     }
     input[type="button"]{
