--- a/Assets/css/guess.css
+++ b/Assets/css/guess.css
@@ -7,6 +7,7 @@ body{
     width: 100%;
     color: white;
     height: 100vh;
+    min-height: 500px;
     box-sizing: border-box;
     background-color: #F0EBCC;
 }
