--- a/Assets/css/guess.css
+++ b/Assets/css/guess.css
@@ -1,8 +1,9 @@
 body{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0;
+    padding: 10px;
     margin: 0;
     width: 100%;
     color: white;
@@ -21,6 +22,9 @@ p{
     width: 50px;
     height: 20px;
     outline: none;
+    text-align: center;
+    font-size: 24px;
+    padding-bottom: 5px;
 }
 #number:focus{
     border-bottom: 2px solid #3EDBF0;
@@ -37,6 +41,7 @@ p{
     border-radius: 5px;
     margin: auto;
     width: 50%;
+    padding: 20px;
 }
 input[type="button"]{
     width: 30%;
@@ -56,12 +61,13 @@ h1{
     margin: 0;
     margin-right: 10px;
 }
-.display{
+#display{
     display: flex;
     align-items: flex-end;
     justify-content: center;
     width: 80%;
     margin: 10px 0;
+    display: none;
 }
 .hello{
     display: none;
@@ -113,6 +119,24 @@ button{
 button:hover{
     cursor: pointer;
 }
+#submit{
+    display: none;
+}
+#maintain{
+    text-align: center;
+    margin-top: 10px;
+    color: #3EDBF0;
+}
+#maintain>a{
+    padding: 5px 7px;
+    text-decoration: none;
+    color: #3EDBF0;
+}
+#maintain>a:hover{
+    background-color: rgba(0, 0, 0, 0.4);
+    color: rgb(242, 242, 242);
+    border-radius: 20px;
+}
 
 @media screen and (max-width:425px) and (min-width:320px){
     .pagewrapper{
@@ -141,6 +165,8 @@ button:hover{
         width: 40px;
         height: 20px;
         margin-left: 20px;
+        font-size: 15px;
+        padding-bottom: 0;
     }
     input[type="button"]{
         width: 30%;
